--- a/base/demo/deployment.yml
+++ b/base/demo/deployment.yml
@@ -11,3 +11,8 @@ spec:
     metadata:
       labels:
         app: trivial-go-web-app
+    spec:
+      containers:
+      - name: webserver-simple
+        ports:
+        - containerPort: 8080
