--- a/projects/testing.yaml
+++ b/projects/testing.yaml
@@ -36,7 +36,7 @@ spec:
   generators:
   - git:
       files:
-      - path: apps\**\testing\config.json
+      - path: apps/**/testing/config.json
       repoURL: https://github.com/ARC-syn/git-ops.git
       requeueAfterSeconds: 20
       revision: ""
@@ -49,7 +49,7 @@ spec:
             repoURL: ""
   - git:
       files:
-      - path: apps\**\testing\config_dir.json
+      - path: apps/**/testing/config_dir.json
       repoURL: https://github.com/ARC-syn/git-ops.git
       requeueAfterSeconds: 20
       revision: ""
