--- a/projects/sandbox.yaml
+++ b/projects/sandbox.yaml
@@ -36,7 +36,7 @@ spec:
   generators:
   - git:
       files:
-      - path: apps\**\sandbox\config.json
+      - path: apps/**/sandbox/config.json
       repoURL: https://github.com/ARC-syn/git-ops.git
       requeueAfterSeconds: 20
       revision: ""
@@ -49,7 +49,7 @@ spec:
             repoURL: ""
   - git:
       files:
-      - path: apps\**\sandbox\config_dir.json
+      - path: apps/**sandbox/config_dir.json
       repoURL: https://github.com/ARC-syn/git-ops.git
       requeueAfterSeconds: 20
       revision: ""
