--- a/apps/demo/base/kustomization.yaml
+++ b/apps/demo/base/kustomization.yaml
@@ -1,4 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources:
-- github.com/ARC-syn/git-ops/microservice/digitizer-slide-composer-base
+namespace: observability
+helmCharts:
+- name: pulsar
+  includeCRDs: true
+  releaseName: pulsar
+  version: 3.0.0
+  repo: https://pulsar.apache.org/charts
