--- a/infrastructure/prometheus/kustomization.yml
+++ b/infrastructure/prometheus/kustomization.yml
@@ -2,8 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: observability
 helmCharts:
-- name: prometheus
+- name: pulsar
   includeCRDs: true
-  releaseName: prometheus
-  version: 15.5.3
-  repo: https://prometheus-community.github.io/helm-charts
+  releaseName: pulsar
+  version: 3.0.0
+  repo: https://pulsar.apache.org/charts
