--- a/apps/demo/base/kustomization.yaml
+++ b/apps/demo/base/kustomization.yaml
@@ -1,6 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: observability
+namespace: testing
 helmCharts:
 - name: pulsar
   includeCRDs: true
