--- a/infrastructure/pulsar/pulsar-helm-chart/Chart.yaml
+++ b/infrastructure/pulsar/pulsar-helm-chart/Chart.yaml
@@ -21,6 +21,7 @@ apiVersion: v2
 appVersion: "2.10.2"
 description: Apache Pulsar Helm chart for Kubernetes
 name: pulsar
+type: application
 version: 3.0.0
 home: https://pulsar.apache.org
 sources:
